# cpp-skeleton-project

./: CMakeLists.txt  Makefile  README.md  bootstrap.sh  dev-setup.sh  setup.sh  test.sh
CmakeModules/: AddCxxExecutable.cmake
myproject/: CMakeLists.txt  stdmemory.h  stdmemory.hpp
myproject/src/: CMakeLists.txt  example.cpp
myproject/test/: CMakeLists.txt  test-myproject.cpp  test_feature.cpp
resources/: vimrc
test/: CMakeLists.txt  test-myproject.cpp  test-stdmemory.cpp
